--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "knplabs/github-api",
+    "name": "panda843/github-api",
     "type": "library",
     "description": "GitHub API v3 client",
     "homepage": "https://github.com/KnpLabs/php-github-api",
